# nes-emu

./: .gitignore  Cargo.toml  flake.nix  index.html
.cargo/: config.toml
.github/workflows/: build.yml
assets/: manifest.json  sw.js
src/: bus.rs  cartridge.rs  cheat.rs  controller.rs  cpu.rs  glue.rs  instructions.rs  main.rs  rom.rs  util.rs
src/apu/: frame_counter.rs  length_counter.rs  mod.rs  pulse.rs  sweep.rs
src/cartridge/: mapper.rs  mod.rs
src/cartridge/mapper/: cnrom.rs  mmc1.rs  mmc3.rs  mod.rs  nrom.rs  uxrom.rs
src/cpu/: addressing_mode.rs  assembler.rs  decode.rs  flags.rs  instructions.rs  mod.rs
src/gui/: cpu_debugger.rs  frame.rs  input.rs  mod.rs  screen.rs  step_state.rs
src/gui/cpu_debugger/: mod.rs  step_state.rs
src/ppu/: mod.rs  nametable.rs  object_attribute.rs  palette.rs  registers.rs  renderer.rs
src/ppu/registers/: address.rs  control.rs  mask.rs  mod.rs  scroll.rs  status.rs
