[package]
name = "nes-emu"
version = "0.1.0"
edition = "2021"

[profile.bench]
debug = true

[dependencies]
# Bit flag manipulation
bitflags = "2.0.0-rc.1"

# Gui utilities
egui_memory_editor = "0.2.2"
rfd = "0.10.0" # File dialog

# Logging
tracing = "0.1.37"
[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter"]

# Gui itself
[dependencies.eframe]
version = "0.20.1"
default-features = false
features = [
    "default_fonts",
    "glow",
]

# Command line arguments
[dependencies.clap]
version = "4.0.29"
features = ["derive"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Async runtime
wasm-bindgen-futures = "0.4.33"
# Logging
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
