[package]
name = "nes-emu"
version = "0.1.0"
edition = "2021"

[profile.bench]
debug = true

[dependencies]
# Bit flag manipulation
bitflags = "2.2.1"

# GUI utilities
egui_memory_editor = "0.2.3"
rfd = "0.11.3" # File dialog

# Logging
tracing = "0.1.37"
[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter"]

# GUI
[dependencies.eframe]
version = "0.21.3"
default-features = false
features = [
    "default_fonts",
    "glow",
]

# Command line arguments
[dependencies.clap]
version = "4.2.5"
features = ["derive"]
